--- a/package.json
+++ b/package.json
@@ -4,46 +4,48 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "npx puppeteer install",
     "dev": "nodemon server.js"
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "bcrypt": "^6.0.0",
-    "cheerio": "^1.1.2",
-    "cloudinary": "^2.8.0",
-    "compression": "^1.8.1",
+    "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0-rc.12",
+    "cloudinary": "^1.41.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
-    "express-rate-limit": "^8.2.0",
-    "firebase-admin": "^13.6.0",
+    "express-rate-limit": "^7.1.5",
+    "firebase-admin": "^11.11.1",
     "google-tts-api": "^2.0.2",
-    "groq-sdk": "^0.34.0",
-    "helmet": "^8.1.0",
+    "groq-sdk": "^0.3.3",
+    "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
-    "microsoft-cognitiveservices-speech-sdk": "^1.47.0",
-    "morgan": "^1.10.1",
+    "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
+    "morgan": "^1.10.0",
     "mp3-duration": "^1.1.0",
-    "multer": "^2.0.2",
-    "mysql2": "^3.15.3",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.5",
     "node-cache": "^5.1.2",
     "qrcode-terminal": "^0.12.0",
-    "razorpay": "^2.9.6",
-    "sequelize": "^6.37.7",
-    "socket.io": "^4.8.1",
+    "razorpay": "^2.9.2",
+    "sequelize": "^6.35.2",
+    "socket.io": "^4.7.2",
     "streamifier": "^0.1.1",
     "string-similarity": "^4.0.4",
-    "uuid": "^13.0.0",
-    "whatsapp-web.js": "^1.34.2",
-    "winston": "^3.18.3",
-    "ws": "^8.18.3",
+    "uuid": "^9.0.1",
+    "whatsapp-web.js": "^1.23.0",
+    "winston": "^3.11.0",
+    "ws": "^8.16.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
