--- a/package.json
+++ b/package.json
@@ -1,51 +1,71 @@
 {
-  "name": "rcm_backend",
-  "version": "1.0.0",
+  "name": "rcm-titan-agi",
+  "version": "2.0.0",
+  "description": "Autonomous Neural Backend Engine for High-Scale AI Operations",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "lint": "eslint .",
+    "worker": "node workers/ai-processor.js"
   },
   "dependencies": {
-    "axios": "^1.13.2",
+    "@bull-board/api": "^6.16.2",
+    "@bull-board/express": "^6.16.2",
+    "@langchain/community": "^0.0.26",
+    "@langchain/groq": "^0.0.3",
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
-    "cheerio": "^1.0.0-rc.12",
-    "cloudinary": "^1.41.0",
+    "bullmq": "^5.66.5",
+    "chromadb": "^1.8.1",
+    "cloudinary": "^2.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
-    "firebase-admin": "^11.11.1",
+    "fluent-ffmpeg": "^2.1.2",
     "google-tts-api": "^2.0.2",
     "groq-sdk": "^0.3.3",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "ioredis": "^5.9.1",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.1.12",
     "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
     "morgan": "^1.10.0",
     "mp3-duration": "^1.1.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.5",
+    "mysql2": "^3.9.1",
     "node-cache": "^5.1.2",
+    "openai": "^4.26.0",
     "qrcode-terminal": "^0.12.0",
-    "razorpay": "^2.9.2",
-    "sequelize": "^6.35.2",
-    "socket.io": "^4.7.2",
+    "sequelize": "^6.37.0",
+    "sharp": "^0.33.2",
+    "socket.io": "^4.7.4",
     "streamifier": "^0.1.1",
     "string-similarity": "^4.0.4",
     "uuid": "^9.0.1",
-    "whatsapp-web.js": "^1.23.0",
+    "whatsapp-web.js": "^1.34.4",
     "winston": "^3.11.0",
-    "ws": "^8.16.0",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "eslint": "^8.56.0",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.4"
+  },
+  "overrides": {
+    "axios": "^1.6.0",
+    "protobufjs": "^7.2.5",
+    "whatwg-url": "^14.0.0"
   },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": ">=20.0.0"
+  },
+  "private": true
 }
