--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
   "name": "rcm-titan-agi",
-  "version": "2.0.0",
-  "description": "Autonomous Neural Backend Engine for High-Scale AI Operations",
+  "version": "3.0.0",
+  "description": "Enterprise-Grade Autonomous Neural Engine | Scalable AI Architecture",
   "main": "server.js",
   "type": "commonjs",
+  "engines": {
+    "node": ">=20.10.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "lint": "eslint .",
-    "worker": "node workers/ai-processor.js"
+    "start:prod": "cross-env NODE_ENV=production node --max-old-space-size=4096 server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "worker": "cross-env NODE_ENV=production node workers/ai-processor.js",
+    "lint": "eslint . --fix",
+    "format": "prettier --write .",
+    "security:audit": "npm audit --production",
+    "clean": "rimraf node_modules package-lock.json",
+    "reinstall": "npm run clean && npm install",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@bull-board/api": "^6.16.2",
     "@bull-board/express": "^6.16.2",
     "@langchain/community": "^0.0.26",
     "@langchain/groq": "^0.0.3",
-    "axios": "^1.6.0",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.66.5",
     "chromadb": "^1.8.1",
-    "cloudinary": "^2.0.0",
+    "cloudinary": "^2.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -32,7 +43,7 @@
     "groq-sdk": "^0.3.3",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
-    "ioredis": "^5.9.1",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.1.12",
     "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
@@ -43,29 +54,38 @@
     "node-cache": "^5.1.2",
     "openai": "^4.26.0",
     "qrcode-terminal": "^0.12.0",
+    "response-time": "^2.3.2",
     "sequelize": "^6.37.0",
     "sharp": "^0.33.2",
     "socket.io": "^4.7.4",
     "streamifier": "^0.1.1",
     "string-similarity": "^4.0.4",
     "uuid": "^9.0.1",
-    "whatsapp-web.js": "^1.34.4",
+    "validator": "^13.11.0",
+    "whatsapp-web.js": "^1.23.0",
     "winston": "^3.11.0",
-    "xss-clean": "^0.1.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "husky": "^9.0.10",
+    "lint-staged": "^15.2.1",
     "nodemon": "^3.0.3",
-    "prettier": "^3.2.4"
+    "prettier": "^3.2.4",
+    "rimraf": "^5.0.5"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "overrides": {
-    "axios": "^1.6.0",
-    "protobufjs": "^7.2.5",
+    "semver": "^7.5.2",
+    "debug": "^4.3.4",
     "whatwg-url": "^14.0.0"
-  },
-  "engines": {
-    "node": ">=20.0.0"
   },
   "private": true
 }
