--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@bull-board/express": "^6.16.2",
     "@langchain/community": "^0.0.26",
     "@langchain/groq": "^0.0.3",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.66.5",
@@ -53,6 +54,7 @@
     "mysql2": "^3.9.1",
     "node-cache": "^5.1.2",
     "openai": "^4.26.0",
+    "pino": "^10.1.1",
     "qrcode-terminal": "^0.12.0",
     "response-time": "^2.3.2",
     "sequelize": "^6.37.0",
@@ -62,7 +64,6 @@
     "string-similarity": "^4.0.4",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
-    "whatsapp-web.js": "^1.23.0",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
