--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.5",
     "chromadb": "^1.8.1",
     "cloudinary": "^2.0.1",
@@ -38,7 +39,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
-    "express-rate-limit": "^7.1.5",
+    "express-rate-limit": "^7.5.1",
+    "firebase-admin": "^13.6.0",
     "fluent-ffmpeg": "^2.1.2",
     "google-tts-api": "^2.0.2",
     "groq-sdk": "^0.3.3",
@@ -53,9 +55,12 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
     "node-cache": "^5.1.2",
+    "node-cron": "^4.2.1",
     "openai": "^4.26.0",
     "pino": "^10.1.1",
+    "puppeteer": "^24.35.0",
     "qrcode-terminal": "^0.12.0",
+    "razorpay": "^2.9.6",
     "response-time": "^2.3.2",
     "sequelize": "^6.37.0",
     "sharp": "^0.33.2",
