--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
-  "name": "rcm-titan-agi",
-  "version": "3.0.0",
-  "description": "Enterprise-Grade Autonomous Neural Engine | Scalable AI Architecture",
+  "name": "rcm-titan-asi",
+  "version": "7.4.0-STABLE-GODMODE",
+  "description": "Artificial Super Intelligence Core | Pure JS | Hyper-Scale Optimized",
   "main": "server.js",
   "type": "commonjs",
   "engines": {
-    "node": ">=20.10.0",
+    "node": ">=20.0.0",
     "npm": ">=10.0.0"
   },
   "scripts": {
     "start": "node server.js",
-    "start:prod": "cross-env NODE_ENV=production node --max-old-space-size=4096 server.js",
+    "start:godmode": "cross-env NODE_ENV=production pm2 start server.js -i max --name titan-core --node-args='--max-old-space-size=8192 --expose-gc --use-largepages'",
     "dev": "cross-env NODE_ENV=development nodemon server.js",
     "worker": "cross-env NODE_ENV=production node workers/ai-processor.js",
     "lint": "eslint . --fix",
     "format": "prettier --write .",
-    "security:audit": "npm audit --production",
-    "clean": "rimraf node_modules package-lock.json",
-    "reinstall": "npm run clean && npm install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "echo 'Manual delete node_modules required on Windows'",
+    "reinstall": "npm install",
+    "monitor": "pm2 monit",
+    "test": "jest --detectOpenHandles --forceExit --coverage",
+    "docker:build": "docker build -t rcm-titan-asi:stable ."
   },
   "dependencies": {
-    "@bull-board/api": "^6.16.2",
-    "@bull-board/express": "^6.16.2",
-    "@langchain/community": "^0.0.26",
-    "@langchain/groq": "^0.0.3",
-    "@whiskeysockets/baileys": "^7.0.0-rc.9",
+    "@bull-board/api": "^5.10.0",
+    "@bull-board/express": "^5.10.0",
+    "@grpc/grpc-js": "^1.10.1",
+    "@grpc/proto-loader": "^0.7.10",
+    "@langchain/community": "^0.3.0",
+    "@langchain/core": "^0.3.0",
+    "@langchain/groq": "^0.1.0",
+    "@langchain/openai": "^0.3.0",
+    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/sdk-node": "^0.48.0",
+    "@whiskeysockets/baileys": "^6.6.0",
     "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.3",
-    "bullmq": "^5.66.5",
+    "bcryptjs": "^2.4.3",
+    "bullmq": "^5.4.0",
     "chromadb": "^1.8.1",
     "cloudinary": "^2.0.1",
     "compression": "^1.7.4",
@@ -39,48 +45,61 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
-    "express-rate-limit": "^7.5.1",
+    "express-rate-limit": "^7.1.5",
     "firebase-admin": "^13.6.0",
     "fluent-ffmpeg": "^2.1.2",
     "google-tts-api": "^2.0.2",
-    "groq-sdk": "^0.3.3",
+    "groq-sdk": "^0.7.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
-    "langchain": "^0.1.12",
+    "kafkajs": "^2.2.4",
+    "langchain": "^0.3.0",
+    "lru-cache": "^10.2.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
     "morgan": "^1.10.0",
-    "mp3-duration": "^1.1.0",
+    "msgpackr": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
     "node-cache": "^5.1.2",
-    "node-cron": "^4.2.1",
-    "openai": "^4.26.0",
-    "pino": "^10.1.1",
-    "puppeteer": "^24.35.0",
+    "node-cron": "^3.0.3",
+    "openai": "^4.77.0",
+    "opossum": "^8.1.0",
+    "pino": "^8.19.0",
+    "pino-http": "^9.0.0",
+    "pm2": "^5.3.1",
+    "prom-client": "^15.1.0",
+    "puppeteer": "^22.0.0",
     "qrcode-terminal": "^0.12.0",
-    "razorpay": "^2.9.6",
+    "rate-limit-redis": "^4.2.0",
+    "razorpay": "^2.9.2",
     "response-time": "^2.3.2",
     "sequelize": "^6.37.0",
     "sharp": "^0.33.2",
     "socket.io": "^4.7.4",
     "streamifier": "^0.1.1",
     "string-similarity": "^4.0.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "toobusy-js": "^0.5.1",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
-    "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "autocannon": "^7.15.0",
+    "clinic": "^13.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "^11.1.0",
     "husky": "^9.0.10",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.1",
     "nodemon": "^3.0.3",
+    "pino-pretty": "^10.3.1",
     "prettier": "^3.2.4",
-    "rimraf": "^5.0.5"
+    "supertest": "^6.3.4"
   },
   "lint-staged": {
     "*.js": [
