--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
+    "edge-tts": "^1.0.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
@@ -58,6 +59,7 @@
     "kafkajs": "^2.2.4",
     "langchain": "^0.3.0",
     "lru-cache": "^10.2.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.47.0",
     "morgan": "^1.10.0",
     "msgpackr": "^1.10.1",
     "multer": "^1.4.5-lts.1",
